Add Postman collection; env & login updates
Add a Postman collection for the Studium backend and update environment and frontend auth logic. Backend: extend .env.example with DEBUG, PORT, DB, JWT and email credential placeholders. Frontend: App.jsx guards the profile fetch (no request when id is missing); Login.jsx adds allowed email domains and domain validation, improves Google Sign-In initialization (reads client id from config and adds error handling), and updates user-facing messaging. Also include updated yarn.lock (dependency resolutions).

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,5 +1,15 @@
-DEBUG=
-PORT=
+DEBUG=app:*
+PORT=3000
+
+# MongoDB usa DBURI
+DBHOST=
+DBPORT=
+DBNAME=
+DBURI=
+# JWT
+TOKEN_SECERT=
+TOKEN_EXP=
+
+# Credenciales de correo electrónico (Gmail + App Password)
 EMAIL=
 PASS=
-TOKEN_SECRET=
